# nitric

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  codecov.yml
crates/nitric/: Cargo.toml
crates/nitric-component/: Cargo.toml  README.md
crates/nitric-component/examples/: basic.rs
crates/nitric-component/src/: allocator.rs  bit_set.rs  error.rs  id.rs  impls.rs  lib.rs  prelude.rs  storage.rs  util.rs
crates/nitric-component/src/allocator/: mod.rs  phantom.rs
crates/nitric-component/src/id/: checked.rs  mod.rs
crates/nitric-component/src/impls/: flat_allocator.rs  flat_bit_set.rs  flat_id.rs  mod.rs  tv_storage.rs  type_safe.rs  type_safe_id.rs  usize_allocator.rs
crates/nitric-lock/: Cargo.toml  README.md
crates/nitric-lock-internals/: Cargo.toml  README.md
crates/nitric-lock-internals/src/: lib.rs  lock.rs
crates/nitric-lock/src/: group.rs  join.rs  lib.rs  lock.rs  mutex.rs
crates/nitric-world/: Cargo.toml
crates/nitric-world/src/: lib.rs
crates/nitric/src/: lib.rs
crates/old/do-not-look-at-this/I-warned-you/nitric/: Cargo-old.toml  README.md
crates/old/do-not-look-at-this/I-warned-you/nitric/examples/: pool.rs
crates/old/do-not-look-at-this/I-warned-you/nitric/reference/: book.toml
crates/old/do-not-look-at-this/I-warned-you/nitric/src/: atom.rs  future.rs  lib.rs  list.rs  pool.rs  system.rs  ticket.rs  wait.rs
crates/old/do-not-look-at-this/I-warned-you/nitric/tests/: futures.rs  list.rs  ticket.rs
docs/: API.md  LICENSE-APACHE  LICENSE-MIT  requirements.md
scripts/: kcov.sh  test.sh
