[package]
name = "nitric-component"
version = "0.1.0"
authors = ["Thomas Schaller <torkleyy@gmail.com>"]
edition = "2018"
description = "Component storages with arbitrary id spaces"
readme = "README.md"
keywords = ["component", "storage", "data", "ecs"]
repository = "https://github.com/torkleyy/nitric/tree/master/crates/nitric-component"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "https://github.com/torkleyy/nitric"  }
maintenance = { status = "experimental" }

[dependencies]
err-derive = "0.1"
