[package]
name = "nitric-lock-internals"
version = "0.0.0"
authors = ["Thomas Schaller <torkleyy@gmail.com>"]
edition = "2018"
description = "Internals of nitric-lock"
readme = "README.md"
keywords = []
repository = "https://github.com/torkleyy/nitric/tree/master/crates/nitric-lock"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "https://github.com/torkleyy/nitric"  }
maintainance = { status = "experimental" }

[dependencies]
lock_api = "0.1.5"
parking_lot = "0.7.0"
