[package]
name = "nitric-lock"
version = "0.0.1"
authors = ["Thomas Schaller <torkleyy@gmail.com>"]
edition = "2018"
description = "Deadlock prevention and lock ordering library"
readme = "README.md"
keywords = ["lock", "mutex", "multiple", "wait"]
repository = "https://github.com/torkleyy/nitric/tree/master/crates/nitric-lock"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "https://github.com/torkleyy/nitric"  }
maintenance = { status = "experimental" }

[dependencies]
lock_api = "0.1.5"
parking_lot = "0.7.0"

#nitric-lock-internals = { path = "../nitric-lock-internals", version = "0.0.1" }
