[package]
name = "nitric"
version = "0.0.1"
authors = ["Thomas Schaller <torkleyy@gmail.com>"]
edition = "2018"
description = "A general-purpose data-processing library."
readme = "../../README.md"
keywords = ["data", "processing", "ecs", "entity", "component"]
repository = "https://github.com/torkleyy/nitric/tree/master/crates/nitric"
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "https://github.com/torkleyy/nitric"  }
maintenance = { status = "experimental" }

[dependencies]
nitric-component = { path = "../nitric-component", version = "0.1.0", optional = true }
nitric-lock = { path = "../nitric-lock", version = "0.0.1", optional = true }

[features]
component = ["nitric-component"]
lock = ["nitric-lock"]

